# auth-microservice

./: .env.template  .gitignore  Cargo.toml  README.md  docker-compose.db.yml  docker-compose.development.yml  docker-compose.yml
docs/: report-finnish.md
k8s/auth-microservice/: deployment.yaml  secret.yaml  service.yaml
k8s/postgres/: configmap.yaml  deployment.yaml  secret.yaml
src/AuthService/: .dockerignore  AuthService.csproj  Dockerfile  Dockerfile.development  Program.cs  appsettings.json
src/AuthService/Config/: AppConfig.cs  Config.cs  JwtConfig.cs
src/AuthService/Controllers/: AuthController.cs  UserController.cs
src/AuthService/Data/: ApplicationDbContext.cs  DbConnection.cs  SeedData.cs
src/AuthService/Grpc/: LoginService.cs  UserService.cs
src/AuthService/Migrations/: 20231112183542_UserDatabaseMigration.Designer.cs  20231112183542_UserDatabaseMigration.cs  20231113093101_UserDatabaseV2.Designer.cs  20231113093101_UserDatabaseV2.cs  20231115115805_UserDatabaseV3.Designer.cs  20231115115805_UserDatabaseV3.cs  ApplicationDbContextModelSnapshot.cs
src/AuthService/Models/: AppRole.cs  AppUser.cs  LoginRequest.cs  UserData.cs
src/AuthService/Properties/: launchSettings.json
src/AuthService/Proto/: auth.proto  user.proto
src/AuthService/Services/: IJwtService.cs  ILoginService.cs  JwtService.cs  LoginService.cs
src/AuthService/Utility/: AuthUtility.cs  HealthcheckUtility.cs
src/auth-cli/: Cargo.toml  build.rs
src/auth-cli/src/: cli.rs  grpc.rs  grpc_client.rs  http.rs  http_client.rs  lib.rs  main.rs  storage.rs  user.rs  util.rs
